parser.out
Created by PLY version 3.4 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> programa
Rule 1     programa -> declaracion TkExecute instlist TkDone
Rule 2     programa -> TkExecute instlist TkDone
Rule 3     term -> TkNum
Rule 4     term -> TkIdent
Rule 5     exp_un -> TkResta exp
Rule 6     exp_un -> TkNegacion exp
Rule 7     exp -> term
Rule 8     exp -> TkTrue
Rule 9     exp -> TkFalse
Rule 10    exp -> exp_un
Rule 11    exp -> TkParAbre exp TkParCierra
Rule 12    exp -> TkCorcheteAbre exp TkCorcheteCierra
Rule 13    exp -> TkLlaveAbre exp TkLlaveCierra
Rule 14    exp -> exp TkMas exp
Rule 15    exp -> exp TkMult exp
Rule 16    exp -> exp TkMod exp
Rule 17    exp -> exp TkDiv exp
Rule 18    exp -> exp TkResta exp
Rule 19    exp -> exp TkIgual exp
Rule 20    exp -> exp TkDesigual exp
Rule 21    exp -> exp TkMenor exp
Rule 22    exp -> exp TkMayor exp
Rule 23    exp -> exp TkMenorIgual exp
Rule 24    exp -> exp TkMayorIgual exp
Rule 25    exp -> exp TkConcat exp
Rule 26    exp -> exp TkInspeccion exp
Rule 27    exp -> exp TkDisyuncion exp
Rule 28    exp -> exp TkConjuncion exp
Rule 29    exp -> exp TkAt exp
Rule 30    instruccion -> TkIdent TkAsignacion exp
Rule 31    instruccion -> TkRead exp
Rule 32    instruccion -> TkWrite exp
Rule 33    instruccion -> TkWhile exp TkDo instlist TkDone
Rule 34    instruccion -> TkFor TkIdent TkFrom exp TkTo exp TkDo instlist TkDone
Rule 35    instruccion -> TkIf exp TkThen instlist TkDone
Rule 36    instruccion -> TkIf exp TkThen instlist TkElse instlist TkDone
Rule 37    instruccion -> declaracion TkExecute instlist TkDone
Rule 38    instruccion -> TkExecute instlist TkDone
Rule 39    instlist -> instlist semicoloninst
Rule 40    instlist -> instruccion
Rule 41    semicoloninst -> TkPuntoYComa instruccion
Rule 42    declaracion -> TkDeclare declist
Rule 43    declist -> dec TkPuntoYComa declist
Rule 44    declist -> dec
Rule 45    dec -> varlist TkType tipo
Rule 46    varlist -> TkIdent TkComa varlist
Rule 47    varlist -> TkIdent
Rule 48    tipo -> TkInteger
Rule 49    tipo -> TkBoolean
Rule 50    tipo -> TkTape

Terminals, with rules where they appear

TkAsignacion         : 30
TkAt                 : 29
TkBoolean            : 49
TkComa               : 46
TkConcat             : 25
TkConjuncion         : 28
TkCorcheteAbre       : 12
TkCorcheteCierra     : 12
TkDeclare            : 42
TkDesigual           : 20
TkDisyuncion         : 27
TkDiv                : 17
TkDo                 : 33 34
TkDone               : 1 2 33 34 35 36 37 38
TkElse               : 36
TkExecute            : 1 2 37 38
TkFalse              : 9
TkFor                : 34
TkFrom               : 34
TkIdent              : 4 30 34 46 47
TkIf                 : 35 36
TkIgual              : 19
TkInspeccion         : 26
TkInteger            : 48
TkLlaveAbre          : 13
TkLlaveCierra        : 13
TkMas                : 14
TkMayor              : 22
TkMayorIgual         : 24
TkMenor              : 21
TkMenorIgual         : 23
TkMod                : 16
TkMult               : 15
TkNegacion           : 6
TkNum                : 3
TkParAbre            : 11
TkParCierra          : 11
TkPuntoYComa         : 41 43
TkRead               : 31
TkResta              : 5 18
TkTape               : 50
TkThen               : 35 36
TkTo                 : 34
TkTrue               : 8
TkType               : 45
TkWhile              : 33
TkWrite              : 32
error                : 

Nonterminals, with rules where they appear

dec                  : 43 44
declaracion          : 1 37
declist              : 42 43
exp                  : 5 6 11 12 13 14 14 15 15 16 16 17 17 18 18 19 19 20 20 21 21 22 22 23 23 24 24 25 25 26 26 27 27 28 28 29 29 30 31 32 33 34 34 35 36
exp_un               : 10
instlist             : 1 2 33 34 35 36 36 37 38 39
instruccion          : 40 41
programa             : 0
semicoloninst        : 39
term                 : 7
tipo                 : 45
varlist              : 45 46

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . declaracion TkExecute instlist TkDone
    (2) programa -> . TkExecute instlist TkDone
    (42) declaracion -> . TkDeclare declist

    TkExecute       shift and go to state 2
    TkDeclare       shift and go to state 4

    programa                       shift and go to state 3
    declaracion                    shift and go to state 1

state 1

    (1) programa -> declaracion . TkExecute instlist TkDone

    TkExecute       shift and go to state 5


state 2

    (2) programa -> TkExecute . instlist TkDone
    (39) instlist -> . instlist semicoloninst
    (40) instlist -> . instruccion
    (30) instruccion -> . TkIdent TkAsignacion exp
    (31) instruccion -> . TkRead exp
    (32) instruccion -> . TkWrite exp
    (33) instruccion -> . TkWhile exp TkDo instlist TkDone
    (34) instruccion -> . TkFor TkIdent TkFrom exp TkTo exp TkDo instlist TkDone
    (35) instruccion -> . TkIf exp TkThen instlist TkDone
    (36) instruccion -> . TkIf exp TkThen instlist TkElse instlist TkDone
    (37) instruccion -> . declaracion TkExecute instlist TkDone
    (38) instruccion -> . TkExecute instlist TkDone
    (42) declaracion -> . TkDeclare declist

    TkIdent         shift and go to state 6
    TkRead          shift and go to state 8
    TkWrite         shift and go to state 14
    TkWhile         shift and go to state 10
    TkFor           shift and go to state 7
    TkIf            shift and go to state 13
    TkExecute       shift and go to state 12
    TkDeclare       shift and go to state 4

    instruccion                    shift and go to state 9
    instlist                       shift and go to state 11
    declaracion                    shift and go to state 15

state 3

    (0) S' -> programa .



state 4

    (42) declaracion -> TkDeclare . declist
    (43) declist -> . dec TkPuntoYComa declist
    (44) declist -> . dec
    (45) dec -> . varlist TkType tipo
    (46) varlist -> . TkIdent TkComa varlist
    (47) varlist -> . TkIdent

    TkIdent         shift and go to state 18

    varlist                        shift and go to state 17
    dec                            shift and go to state 19
    declist                        shift and go to state 16

state 5

    (1) programa -> declaracion TkExecute . instlist TkDone
    (39) instlist -> . instlist semicoloninst
    (40) instlist -> . instruccion
    (30) instruccion -> . TkIdent TkAsignacion exp
    (31) instruccion -> . TkRead exp
    (32) instruccion -> . TkWrite exp
    (33) instruccion -> . TkWhile exp TkDo instlist TkDone
    (34) instruccion -> . TkFor TkIdent TkFrom exp TkTo exp TkDo instlist TkDone
    (35) instruccion -> . TkIf exp TkThen instlist TkDone
    (36) instruccion -> . TkIf exp TkThen instlist TkElse instlist TkDone
    (37) instruccion -> . declaracion TkExecute instlist TkDone
    (38) instruccion -> . TkExecute instlist TkDone
    (42) declaracion -> . TkDeclare declist

    TkIdent         shift and go to state 6
    TkRead          shift and go to state 8
    TkWrite         shift and go to state 14
    TkWhile         shift and go to state 10
    TkFor           shift and go to state 7
    TkIf            shift and go to state 13
    TkExecute       shift and go to state 12
    TkDeclare       shift and go to state 4

    instruccion                    shift and go to state 9
    instlist                       shift and go to state 20
    declaracion                    shift and go to state 15

state 6

    (30) instruccion -> TkIdent . TkAsignacion exp

    TkAsignacion    shift and go to state 21


state 7

    (34) instruccion -> TkFor . TkIdent TkFrom exp TkTo exp TkDo instlist TkDone

    TkIdent         shift and go to state 22


state 8

    (31) instruccion -> TkRead . exp
    (7) exp -> . term
    (8) exp -> . TkTrue
    (9) exp -> . TkFalse
    (10) exp -> . exp_un
    (11) exp -> . TkParAbre exp TkParCierra
    (12) exp -> . TkCorcheteAbre exp TkCorcheteCierra
    (13) exp -> . TkLlaveAbre exp TkLlaveCierra
    (14) exp -> . exp TkMas exp
    (15) exp -> . exp TkMult exp
    (16) exp -> . exp TkMod exp
    (17) exp -> . exp TkDiv exp
    (18) exp -> . exp TkResta exp
    (19) exp -> . exp TkIgual exp
    (20) exp -> . exp TkDesigual exp
    (21) exp -> . exp TkMenor exp
    (22) exp -> . exp TkMayor exp
    (23) exp -> . exp TkMenorIgual exp
    (24) exp -> . exp TkMayorIgual exp
    (25) exp -> . exp TkConcat exp
    (26) exp -> . exp TkInspeccion exp
    (27) exp -> . exp TkDisyuncion exp
    (28) exp -> . exp TkConjuncion exp
    (29) exp -> . exp TkAt exp
    (3) term -> . TkNum
    (4) term -> . TkIdent
    (5) exp_un -> . TkResta exp
    (6) exp_un -> . TkNegacion exp

    TkTrue          shift and go to state 24
    TkFalse         shift and go to state 26
    TkParAbre       shift and go to state 28
    TkCorcheteAbre  shift and go to state 34
    TkLlaveAbre     shift and go to state 32
    TkNum           shift and go to state 27
    TkIdent         shift and go to state 29
    TkResta         shift and go to state 23
    TkNegacion      shift and go to state 25

    term                           shift and go to state 31
    exp                            shift and go to state 33
    exp_un                         shift and go to state 30

state 9

    (40) instlist -> instruccion .

    TkDone          reduce using rule 40 (instlist -> instruccion .)
    TkPuntoYComa    reduce using rule 40 (instlist -> instruccion .)
    TkElse          reduce using rule 40 (instlist -> instruccion .)


state 10

    (33) instruccion -> TkWhile . exp TkDo instlist TkDone
    (7) exp -> . term
    (8) exp -> . TkTrue
    (9) exp -> . TkFalse
    (10) exp -> . exp_un
    (11) exp -> . TkParAbre exp TkParCierra
    (12) exp -> . TkCorcheteAbre exp TkCorcheteCierra
    (13) exp -> . TkLlaveAbre exp TkLlaveCierra
    (14) exp -> . exp TkMas exp
    (15) exp -> . exp TkMult exp
    (16) exp -> . exp TkMod exp
    (17) exp -> . exp TkDiv exp
    (18) exp -> . exp TkResta exp
    (19) exp -> . exp TkIgual exp
    (20) exp -> . exp TkDesigual exp
    (21) exp -> . exp TkMenor exp
    (22) exp -> . exp TkMayor exp
    (23) exp -> . exp TkMenorIgual exp
    (24) exp -> . exp TkMayorIgual exp
    (25) exp -> . exp TkConcat exp
    (26) exp -> . exp TkInspeccion exp
    (27) exp -> . exp TkDisyuncion exp
    (28) exp -> . exp TkConjuncion exp
    (29) exp -> . exp TkAt exp
    (3) term -> . TkNum
    (4) term -> . TkIdent
    (5) exp_un -> . TkResta exp
    (6) exp_un -> . TkNegacion exp

    TkTrue          shift and go to state 24
    TkFalse         shift and go to state 26
    TkParAbre       shift and go to state 28
    TkCorcheteAbre  shift and go to state 34
    TkLlaveAbre     shift and go to state 32
    TkNum           shift and go to state 27
    TkIdent         shift and go to state 29
    TkResta         shift and go to state 23
    TkNegacion      shift and go to state 25

    term                           shift and go to state 31
    exp                            shift and go to state 35
    exp_un                         shift and go to state 30

state 11

    (2) programa -> TkExecute instlist . TkDone
    (39) instlist -> instlist . semicoloninst
    (41) semicoloninst -> . TkPuntoYComa instruccion

    TkDone          shift and go to state 38
    TkPuntoYComa    shift and go to state 36

    semicoloninst                  shift and go to state 37

state 12

    (38) instruccion -> TkExecute . instlist TkDone
    (39) instlist -> . instlist semicoloninst
    (40) instlist -> . instruccion
    (30) instruccion -> . TkIdent TkAsignacion exp
    (31) instruccion -> . TkRead exp
    (32) instruccion -> . TkWrite exp
    (33) instruccion -> . TkWhile exp TkDo instlist TkDone
    (34) instruccion -> . TkFor TkIdent TkFrom exp TkTo exp TkDo instlist TkDone
    (35) instruccion -> . TkIf exp TkThen instlist TkDone
    (36) instruccion -> . TkIf exp TkThen instlist TkElse instlist TkDone
    (37) instruccion -> . declaracion TkExecute instlist TkDone
    (38) instruccion -> . TkExecute instlist TkDone
    (42) declaracion -> . TkDeclare declist

    TkIdent         shift and go to state 6
    TkRead          shift and go to state 8
    TkWrite         shift and go to state 14
    TkWhile         shift and go to state 10
    TkFor           shift and go to state 7
    TkIf            shift and go to state 13
    TkExecute       shift and go to state 12
    TkDeclare       shift and go to state 4

    instruccion                    shift and go to state 9
    instlist                       shift and go to state 39
    declaracion                    shift and go to state 15

state 13

    (35) instruccion -> TkIf . exp TkThen instlist TkDone
    (36) instruccion -> TkIf . exp TkThen instlist TkElse instlist TkDone
    (7) exp -> . term
    (8) exp -> . TkTrue
    (9) exp -> . TkFalse
    (10) exp -> . exp_un
    (11) exp -> . TkParAbre exp TkParCierra
    (12) exp -> . TkCorcheteAbre exp TkCorcheteCierra
    (13) exp -> . TkLlaveAbre exp TkLlaveCierra
    (14) exp -> . exp TkMas exp
    (15) exp -> . exp TkMult exp
    (16) exp -> . exp TkMod exp
    (17) exp -> . exp TkDiv exp
    (18) exp -> . exp TkResta exp
    (19) exp -> . exp TkIgual exp
    (20) exp -> . exp TkDesigual exp
    (21) exp -> . exp TkMenor exp
    (22) exp -> . exp TkMayor exp
    (23) exp -> . exp TkMenorIgual exp
    (24) exp -> . exp TkMayorIgual exp
    (25) exp -> . exp TkConcat exp
    (26) exp -> . exp TkInspeccion exp
    (27) exp -> . exp TkDisyuncion exp
    (28) exp -> . exp TkConjuncion exp
    (29) exp -> . exp TkAt exp
    (3) term -> . TkNum
    (4) term -> . TkIdent
    (5) exp_un -> . TkResta exp
    (6) exp_un -> . TkNegacion exp

    TkTrue          shift and go to state 24
    TkFalse         shift and go to state 26
    TkParAbre       shift and go to state 28
    TkCorcheteAbre  shift and go to state 34
    TkLlaveAbre     shift and go to state 32
    TkNum           shift and go to state 27
    TkIdent         shift and go to state 29
    TkResta         shift and go to state 23
    TkNegacion      shift and go to state 25

    term                           shift and go to state 31
    exp                            shift and go to state 40
    exp_un                         shift and go to state 30

state 14

    (32) instruccion -> TkWrite . exp
    (7) exp -> . term
    (8) exp -> . TkTrue
    (9) exp -> . TkFalse
    (10) exp -> . exp_un
    (11) exp -> . TkParAbre exp TkParCierra
    (12) exp -> . TkCorcheteAbre exp TkCorcheteCierra
    (13) exp -> . TkLlaveAbre exp TkLlaveCierra
    (14) exp -> . exp TkMas exp
    (15) exp -> . exp TkMult exp
    (16) exp -> . exp TkMod exp
    (17) exp -> . exp TkDiv exp
    (18) exp -> . exp TkResta exp
    (19) exp -> . exp TkIgual exp
    (20) exp -> . exp TkDesigual exp
    (21) exp -> . exp TkMenor exp
    (22) exp -> . exp TkMayor exp
    (23) exp -> . exp TkMenorIgual exp
    (24) exp -> . exp TkMayorIgual exp
    (25) exp -> . exp TkConcat exp
    (26) exp -> . exp TkInspeccion exp
    (27) exp -> . exp TkDisyuncion exp
    (28) exp -> . exp TkConjuncion exp
    (29) exp -> . exp TkAt exp
    (3) term -> . TkNum
    (4) term -> . TkIdent
    (5) exp_un -> . TkResta exp
    (6) exp_un -> . TkNegacion exp

    TkTrue          shift and go to state 24
    TkFalse         shift and go to state 26
    TkParAbre       shift and go to state 28
    TkCorcheteAbre  shift and go to state 34
    TkLlaveAbre     shift and go to state 32
    TkNum           shift and go to state 27
    TkIdent         shift and go to state 29
    TkResta         shift and go to state 23
    TkNegacion      shift and go to state 25

    term                           shift and go to state 31
    exp                            shift and go to state 41
    exp_un                         shift and go to state 30

state 15

    (37) instruccion -> declaracion . TkExecute instlist TkDone

    TkExecute       shift and go to state 42


state 16

    (42) declaracion -> TkDeclare declist .

    TkExecute       reduce using rule 42 (declaracion -> TkDeclare declist .)


state 17

    (45) dec -> varlist . TkType tipo

    TkType          shift and go to state 43


state 18

    (46) varlist -> TkIdent . TkComa varlist
    (47) varlist -> TkIdent .

    TkComa          shift and go to state 44
    TkType          reduce using rule 47 (varlist -> TkIdent .)


state 19

    (43) declist -> dec . TkPuntoYComa declist
    (44) declist -> dec .

    TkPuntoYComa    shift and go to state 45
    TkExecute       reduce using rule 44 (declist -> dec .)


state 20

    (1) programa -> declaracion TkExecute instlist . TkDone
    (39) instlist -> instlist . semicoloninst
    (41) semicoloninst -> . TkPuntoYComa instruccion

    TkDone          shift and go to state 46
    TkPuntoYComa    shift and go to state 36

    semicoloninst                  shift and go to state 37

state 21

    (30) instruccion -> TkIdent TkAsignacion . exp
    (7) exp -> . term
    (8) exp -> . TkTrue
    (9) exp -> . TkFalse
    (10) exp -> . exp_un
    (11) exp -> . TkParAbre exp TkParCierra
    (12) exp -> . TkCorcheteAbre exp TkCorcheteCierra
    (13) exp -> . TkLlaveAbre exp TkLlaveCierra
    (14) exp -> . exp TkMas exp
    (15) exp -> . exp TkMult exp
    (16) exp -> . exp TkMod exp
    (17) exp -> . exp TkDiv exp
    (18) exp -> . exp TkResta exp
    (19) exp -> . exp TkIgual exp
    (20) exp -> . exp TkDesigual exp
    (21) exp -> . exp TkMenor exp
    (22) exp -> . exp TkMayor exp
    (23) exp -> . exp TkMenorIgual exp
    (24) exp -> . exp TkMayorIgual exp
    (25) exp -> . exp TkConcat exp
    (26) exp -> . exp TkInspeccion exp
    (27) exp -> . exp TkDisyuncion exp
    (28) exp -> . exp TkConjuncion exp
    (29) exp -> . exp TkAt exp
    (3) term -> . TkNum
    (4) term -> . TkIdent
    (5) exp_un -> . TkResta exp
    (6) exp_un -> . TkNegacion exp

    TkTrue          shift and go to state 24
    TkFalse         shift and go to state 26
    TkParAbre       shift and go to state 28
    TkCorcheteAbre  shift and go to state 34
    TkLlaveAbre     shift and go to state 32
    TkNum           shift and go to state 27
    TkIdent         shift and go to state 29
    TkResta         shift and go to state 23
    TkNegacion      shift and go to state 25

    term                           shift and go to state 31
    exp                            shift and go to state 47
    exp_un                         shift and go to state 30

state 22

    (34) instruccion -> TkFor TkIdent . TkFrom exp TkTo exp TkDo instlist TkDone

    TkFrom          shift and go to state 48


state 23

    (5) exp_un -> TkResta . exp
    (7) exp -> . term
    (8) exp -> . TkTrue
    (9) exp -> . TkFalse
    (10) exp -> . exp_un
    (11) exp -> . TkParAbre exp TkParCierra
    (12) exp -> . TkCorcheteAbre exp TkCorcheteCierra
    (13) exp -> . TkLlaveAbre exp TkLlaveCierra
    (14) exp -> . exp TkMas exp
    (15) exp -> . exp TkMult exp
    (16) exp -> . exp TkMod exp
    (17) exp -> . exp TkDiv exp
    (18) exp -> . exp TkResta exp
    (19) exp -> . exp TkIgual exp
    (20) exp -> . exp TkDesigual exp
    (21) exp -> . exp TkMenor exp
    (22) exp -> . exp TkMayor exp
    (23) exp -> . exp TkMenorIgual exp
    (24) exp -> . exp TkMayorIgual exp
    (25) exp -> . exp TkConcat exp
    (26) exp -> . exp TkInspeccion exp
    (27) exp -> . exp TkDisyuncion exp
    (28) exp -> . exp TkConjuncion exp
    (29) exp -> . exp TkAt exp
    (3) term -> . TkNum
    (4) term -> . TkIdent
    (5) exp_un -> . TkResta exp
    (6) exp_un -> . TkNegacion exp

    TkTrue          shift and go to state 24
    TkFalse         shift and go to state 26
    TkParAbre       shift and go to state 28
    TkCorcheteAbre  shift and go to state 34
    TkLlaveAbre     shift and go to state 32
    TkNum           shift and go to state 27
    TkIdent         shift and go to state 29
    TkResta         shift and go to state 23
    TkNegacion      shift and go to state 25

    term                           shift and go to state 31
    exp                            shift and go to state 49
    exp_un                         shift and go to state 30

state 24

    (8) exp -> TkTrue .

    TkMas           reduce using rule 8 (exp -> TkTrue .)
    TkMult          reduce using rule 8 (exp -> TkTrue .)
    TkMod           reduce using rule 8 (exp -> TkTrue .)
    TkDiv           reduce using rule 8 (exp -> TkTrue .)
    TkResta         reduce using rule 8 (exp -> TkTrue .)
    TkIgual         reduce using rule 8 (exp -> TkTrue .)
    TkDesigual      reduce using rule 8 (exp -> TkTrue .)
    TkMenor         reduce using rule 8 (exp -> TkTrue .)
    TkMayor         reduce using rule 8 (exp -> TkTrue .)
    TkMenorIgual    reduce using rule 8 (exp -> TkTrue .)
    TkMayorIgual    reduce using rule 8 (exp -> TkTrue .)
    TkConcat        reduce using rule 8 (exp -> TkTrue .)
    TkInspeccion    reduce using rule 8 (exp -> TkTrue .)
    TkDisyuncion    reduce using rule 8 (exp -> TkTrue .)
    TkConjuncion    reduce using rule 8 (exp -> TkTrue .)
    TkAt            reduce using rule 8 (exp -> TkTrue .)
    TkDone          reduce using rule 8 (exp -> TkTrue .)
    TkPuntoYComa    reduce using rule 8 (exp -> TkTrue .)
    TkElse          reduce using rule 8 (exp -> TkTrue .)
    TkDo            reduce using rule 8 (exp -> TkTrue .)
    TkThen          reduce using rule 8 (exp -> TkTrue .)
    TkParCierra     reduce using rule 8 (exp -> TkTrue .)
    TkLlaveCierra   reduce using rule 8 (exp -> TkTrue .)
    TkCorcheteCierra reduce using rule 8 (exp -> TkTrue .)
    TkTo            reduce using rule 8 (exp -> TkTrue .)


state 25

    (6) exp_un -> TkNegacion . exp
    (7) exp -> . term
    (8) exp -> . TkTrue
    (9) exp -> . TkFalse
    (10) exp -> . exp_un
    (11) exp -> . TkParAbre exp TkParCierra
    (12) exp -> . TkCorcheteAbre exp TkCorcheteCierra
    (13) exp -> . TkLlaveAbre exp TkLlaveCierra
    (14) exp -> . exp TkMas exp
    (15) exp -> . exp TkMult exp
    (16) exp -> . exp TkMod exp
    (17) exp -> . exp TkDiv exp
    (18) exp -> . exp TkResta exp
    (19) exp -> . exp TkIgual exp
    (20) exp -> . exp TkDesigual exp
    (21) exp -> . exp TkMenor exp
    (22) exp -> . exp TkMayor exp
    (23) exp -> . exp TkMenorIgual exp
    (24) exp -> . exp TkMayorIgual exp
    (25) exp -> . exp TkConcat exp
    (26) exp -> . exp TkInspeccion exp
    (27) exp -> . exp TkDisyuncion exp
    (28) exp -> . exp TkConjuncion exp
    (29) exp -> . exp TkAt exp
    (3) term -> . TkNum
    (4) term -> . TkIdent
    (5) exp_un -> . TkResta exp
    (6) exp_un -> . TkNegacion exp

    TkTrue          shift and go to state 24
    TkFalse         shift and go to state 26
    TkParAbre       shift and go to state 28
    TkCorcheteAbre  shift and go to state 34
    TkLlaveAbre     shift and go to state 32
    TkNum           shift and go to state 27
    TkIdent         shift and go to state 29
    TkResta         shift and go to state 23
    TkNegacion      shift and go to state 25

    term                           shift and go to state 31
    exp                            shift and go to state 50
    exp_un                         shift and go to state 30

state 26

    (9) exp -> TkFalse .

    TkMas           reduce using rule 9 (exp -> TkFalse .)
    TkMult          reduce using rule 9 (exp -> TkFalse .)
    TkMod           reduce using rule 9 (exp -> TkFalse .)
    TkDiv           reduce using rule 9 (exp -> TkFalse .)
    TkResta         reduce using rule 9 (exp -> TkFalse .)
    TkIgual         reduce using rule 9 (exp -> TkFalse .)
    TkDesigual      reduce using rule 9 (exp -> TkFalse .)
    TkMenor         reduce using rule 9 (exp -> TkFalse .)
    TkMayor         reduce using rule 9 (exp -> TkFalse .)
    TkMenorIgual    reduce using rule 9 (exp -> TkFalse .)
    TkMayorIgual    reduce using rule 9 (exp -> TkFalse .)
    TkConcat        reduce using rule 9 (exp -> TkFalse .)
    TkInspeccion    reduce using rule 9 (exp -> TkFalse .)
    TkDisyuncion    reduce using rule 9 (exp -> TkFalse .)
    TkConjuncion    reduce using rule 9 (exp -> TkFalse .)
    TkAt            reduce using rule 9 (exp -> TkFalse .)
    TkDone          reduce using rule 9 (exp -> TkFalse .)
    TkPuntoYComa    reduce using rule 9 (exp -> TkFalse .)
    TkElse          reduce using rule 9 (exp -> TkFalse .)
    TkDo            reduce using rule 9 (exp -> TkFalse .)
    TkThen          reduce using rule 9 (exp -> TkFalse .)
    TkParCierra     reduce using rule 9 (exp -> TkFalse .)
    TkLlaveCierra   reduce using rule 9 (exp -> TkFalse .)
    TkCorcheteCierra reduce using rule 9 (exp -> TkFalse .)
    TkTo            reduce using rule 9 (exp -> TkFalse .)


state 27

    (3) term -> TkNum .
